# personal-agent-google-adk

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: agent.py  main.py
app/agents/: __init__.py
app/agents/gmail/: agent.py
app/clients/: gmail.py
app/core/: config.py
app/sub_agents/gmail/: content_analysis.py  digest_reporting.py  organization.py  priority_triage.py  search_filtering.py  security_monitoring.py  time_intelligence.py
app/tools/: gmail.py
clients/: gmail.py
manager/: agent.py
static/js/: app.js  audio-player.js
sub_agents/gmail/: __init__.py  content_analysis.py  digest_reporting.py  organization.py  priority_triage.py  search_filtering.py  security_monitoring.py  time_intelligence.py
tools/: gmail.py
